// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Black Button 1`] = `
<button
  className="button"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Danger Button 1`] = `
<button
  className="button  is-danger"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Dark Button 1`] = `
<button
  className="button  is-dark"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Disabled Button 1`] = `
<button
  className="button  is-primary"
  disabled={true}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Full Button 1`] = `
<button
  className="button  is-primary  is-fullwidth"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Info Button 1`] = `
<button
  className="button  is-info"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Inverted Button 1`] = `
<button
  className="button  is-primary    is-inverted"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Large Button 1`] = `
<button
  className="button  is-primary is-large"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Light Button 1`] = `
<button
  className="button  is-light"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Link Button 1`] = `
<button
  className="button  is-link"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Medium Button 1`] = `
<button
  className="button  is-primary is-medium"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Outlined Button 1`] = `
<button
  className="button  is-primary   is-outlined"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Primary Button 1`] = `
<button
  className="button  is-primary"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Rounded Button 1`] = `
<button
  className="button  is-primary     is-rounded"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Small Button 1`] = `
<button
  className="button  is-primary is-small"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Success Button 1`] = `
<button
  className="button  is-success"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Text Button 1`] = `
<button
  className="button  is-text"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button Warning Button 1`] = `
<button
  className="button  is-warning"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;

exports[`Storyshots Components/Button White Button 1`] = `
<button
  className="button  is-white"
  disabled={false}
  title=""
>
  Sample Button
</button>
`;
